--- a/Intent/src/main/res/values/strings.xml
+++ b/Intent/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
     <string name="action_settings">Settings</string>
     <string name="action_quit">Quit</string>
     <string name="action_secondary">Second Activity</string>
-    <string name="action_third">Third Activity (Return Result)</string>
+    <string name="action_third">Third Activity (Test Return Result)</string>
     <string name="title_activity_second">SecondActivity</string>
     <string name="title_activity_secondary">Secondary</string>
-    <string name="title_home">Your Message from MainActivity</string>
+    <string name="title_home">Go Home</string>
     <string name="title_datasection">Data Section</string>
     <string name="title_alarms">Alarms</string>
     <string name="title_activity_settings">Settings</string>
@@ -92,5 +92,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_example">Example action</string>
+    <string name="tired">This is only week 5 though.</string>
+    <string name="tired1">Are you tired?</string>
+    <string name="message_from_main_is">Message from Main is:</string>
 
 </resources>
